Changed editor cursor update behaviour to avoid flickering on useless updating Changed position and styled editor close button Editor toolbar items now positioned better

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -455,6 +455,32 @@ navbar .logo {
   background-color: white;
 }
 
+.container-room .left-cont #editorParent #ql-close{
+  float: right;
+  position: relative;
+  bottom: 90%;
+  right: 2%;
+  border: 1px solid #4ecca3;
+  border-radius: 50%;
+  padding: 10px;
+  text-align: center;
+  background: white;
+
+}
+.container-room .left-cont #editorParent #ql-close:hover{
+  cursor: pointer;
+  background:#4ecca3;
+  transform: scaleZ(5%);
+}
+
+.container-room .left-cont #editorParent .ql-toolbar{
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .ql-editor{
   padding-top: 20px !important;
 }
